tests/base/parser/bad/address_spid_as_field.scilla
scilla_version 0

contract AddressSPIDField()

transition Test6 (param1 : ByStr20 with contract field _balance : Uint128 end)
end
